src/app/random/tetris/tetris.component.scss
:host {
  display: block;
  width: 248px;
  height: 110px;
  box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
  background: #EFEFEF;

  * {
    color: #131313;
  }

  h3 {
    font-weight: bold;
  }
  .tetris {
    width: 100%;

    display: flex;
    justify-content: flex-start;

    .pieces {
      height: 110px;
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: center;

      .piece {
        margin: 0 auto;
      }

      .piece.current {
        border: 5px solid #AAA;
        border-radius: 1rem;
        background: #131313;
        img {
          width: 96px;
          height: 96px;
        }
      }
      
    }
    .controls {
      flex-direction: column;
      justify-content: center;
      align-items: center;

      * {
        user-select: none; /* Standard */
      }

      .piece.next {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        h3 {
          font-size: 1rem;
          margin-left: 0.5rem;
        }
        img {
          width: 48px;
          height: 48px;
        }
      }

      .gradient-button {
        border: 3px solid #666;
        margin: 5px;
        font-family: "Arial Black", Gadget, sans-serif;
        font-size: 16px;
        padding: 8px;
        text-align: center;
        text-transform: uppercase;
        transition: 0.5s;
        background-size: 200% auto;
        color: #FFF;
        box-shadow: 3px 3px 20px rgba(0,0,0,0.3);
        border-radius: 8px;
        width: 64px;
        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
        cursor: pointer;
        display: inline-block;
      }
      .gradient-button:hover{
        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
      }
      .gradient-button-4 {background-image: linear-gradient(to right, #00d2ff 0%, #3a7bd5 51%, #00d2ff 100%)}
      .gradient-button-4:hover { background-position: right center; }
    }

  }

  .log {
    display: flex;
    margin-left: 0.5rem;
    flex-direction: column;
    align-items: flex-start;
    height: 110px;
    overflow-y: hidden;
    img {
      width: 32px;
      height: 32px;
    }
  }

}

